# ml2b

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  grade.sh  grade_manual.py  ml2b.py  pyproject.toml  requirements.txt  run.py  test_submission.sh
0-en/: best_solution.py  config.yaml  journal.json  tree_plot.html
agents/aide/: Dockerfile  config.yaml  requirements.txt  start.sh
agents/dummy/: Dockerfile  config.yaml  start.sh
agents/ml_master/: Dockerfile  config.yaml  start.sh
agents/react/: Dockerfile  additional_notes.txt  config.yaml  start.sh
agents/react/react-codeagent/: pyproject.toml
agents/react/react-codeagent/.devcontainer/: Dockerfile  devcontainer.json
agents/react/react-codeagent/src/: config.py  main.py
agents/react/react-codeagent/src/agent/: agent.py  prompts.py  router.py  tools.py
agents/react/react-codeagent/src/mcp/: server.py
competitions/: README.md  competitions.json  competitions_broken.json  comps.ipynb  comps.py  load_data.py  load_data.sh  rename_files.py
docs/: competitions.md  grading.md
environments/: __init__.py  utils.py
leakage/: README.md  analyze_results.py  leakages.ipynb  make_subfolders.sh  run_parallel.sh  submission_mgr.py
loaders/: __init__.py  biker.py  classify_leaves.py  data_loader.py  data_loaders.py  default.py  emnist.py  multilabel.py  photo_classification.py  segmentation.py  sheep_classification.py  utils.py
metrics/: AUP_stats.py  hitmap_visualization.py
python/: Dockerfile  ast_parser.py  bench.py  code_grader.py  common.py  competition.py  dataloaders.py  grade_functions.py  grader.py  requirements.txt  segmentation_grader.py  splitters.py
src/: bench.py  main.py
src/runners/: __init__.py  (+2 more)
(+48 files in other folders)
