[project]
name = "mlbench-infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.3",
    "click==8.2.1",
    "common>=0.1.2",
    "docker==7.1.0",
    "gdown>=5.2.0",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "loguru==0.7.3",
    "pandas==2.3.2",
    "pydantic==2.11.7",
    "pyyaml>=6.0.2",
    "rich==14.1.0",
    "scikit-learn==1.7.1",
    "typer==0.16.1",
    "huggingface_hub==0.35.3",
]
