[project]
name = "mlbench-infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet",
    "charset-normalizer",
    "click",
    "common",
    "docker",
    "gdown",
    "ipykernel",
    "jinja2",
    "loguru",
    "pandas",
    "pydantic",
    "pyyaml",
    "rich",
    "scikit-learn",
    "typer",
    "huggingface_hub",
]
